RESOLVED FIXED211659
Fix build error on PlatStation port after r261132
https://bugs.webkit.org/show_bug.cgi?id=211659
Summary Fix build error on PlatStation port after r261132
Basuke Suzuki
Reported 2020-05-08 20:47:40 PDT
In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-767013ce-18.cpp:1: ../../Source/WebCore\page/scrolling/ScrollingTreeGestureState.cpp:53:28: error: member access into incomplete type 'WebCore::ScrollingTree' m_scrollingTree.handleWheelEventPhase(*m_mayBeginNodeID, PlatformWheelEventPhaseCancelled);
Attachments
PATCH (1.00 KB, patch)
2020-05-08 20:57 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2020-05-08 20:57:13 PDT
EWS
Comment 2 2020-05-08 21:17:37 PDT
Committed r261431: <https://trac.webkit.org/changeset/261431> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398913 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-08 21:18:13 PDT
Note You need to log in before you can comment on or make changes to this bug.