Fix build error on PlatStation port after r261132 https://bugs.webkit.org/show_bug.cgi?id=211659

Unreviewed build fix after r261132.


* page/scrolling/ScrollingTreeGestureState.cpp:


Canonical link: https://commits.webkit.org/224577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261431 268f45cc-cd09-0410-ab3c-d52691b4dbfc